test/sema/function-redefinition.delta
// RUN: %check_errors %not %delta -typecheck %s

void foo() { }
void foo() { } // CHECK: [[@LINE]]:6: error: redefinition of 'foo'

void bar(int a) { }
void bar(int b) { } // CHECK: [[@LINE]]:6: error: redefinition of 'bar'
